<resources>
    <string name="app_name">TicTacToe</string>
    <string name="application_name">TicTacToe</string>
    <string name="number_of_matches">Number Of Matches</string>
    <string name="start_game_text">Start Game</string>
    <string name="player1_text">Player1</string>
    <string name="player2_text">Player2</string>
    <string name="player_placeholder_x">X</string>
    <string name="player_placeholder_o">O</string>
    <string-array name="number_of_matches_in_session">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
    </string-array>
    <string name="score_sting">Score = %1$d</string>
    <string name="match_draw_text">Nobody won the Game. Match Draw</string>
    <string name="match_won_text">Player %1$s won the game. Yeee!!</string>
    <string name="exit_dialog_title">Are you sure you want to exit ?</string>
    <string name="exit_dialog_message">It yes, this will reset all the current game data. You will be redirected by to home screen to start a new session.</string>
    <string name="exit_application_message">Are you sure you want to exit the application? </string>
    <string name="result_string_winner">Winner of this game is %1$s with score of %2$d / %3$d.</string>
    <string name="result_string_draw">No body won the game. Match draw. Score equal for both players i.e %1$d / %2$d.</string>
</resources>
