<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fedbe0"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.8"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#F8C5C5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/number_of_matches"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/number_of_matches_selector"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/player_text_margin_start"
                    android:layout_marginEnd="@dimen/player_text_margin_end"
                    android:gravity="center"
                    android:text="@string/player1_text"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/player_1_x_button"
                    android:layout_width="@dimen/placeholder_selector_button_size"
                    android:layout_height="@dimen/placeholder_selector_button_size"
                    android:layout_margin="@dimen/placeholder_selector_button_margin"
                    android:backgroundTint="@color/placeholder_selected"
                    android:text="@string/player_placeholder_x"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/player_1_o_button"
                    android:layout_width="@dimen/placeholder_selector_button_size"
                    android:layout_height="@dimen/placeholder_selector_button_size"
                    android:layout_margin="@dimen/placeholder_selector_button_margin"
                    android:backgroundTint="@color/placeholder_other"
                    android:text="@string/player_placeholder_o"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/player_text_margin_start"
                    android:layout_marginEnd="@dimen/player_text_margin_end"
                    android:gravity="center"
                    android:text="@string/player2_text"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/player_2_x_button"
                    android:layout_width="@dimen/placeholder_selector_button_size"
                    android:layout_height="@dimen/placeholder_selector_button_size"
                    android:layout_margin="@dimen/placeholder_selector_button_margin"
                    android:backgroundTint="@color/placeholder_other"
                    android:text="@string/player_placeholder_x"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/player_2_o_button"
                    android:layout_width="@dimen/placeholder_selector_button_size"
                    android:layout_height="@dimen/placeholder_selector_button_size"
                    android:layout_margin="@dimen/placeholder_selector_button_margin"
                    android:backgroundTint="@color/placeholder_selected"
                    android:text="@string/player_placeholder_o"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_game_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>
